Light/Dark mode toggle - remove some blanket transitions that cause heavy rendering when switching theme Make sure to keep transitions in for toggling the menu bar

--- a/resources/css/core/layout.css
+++ b/resources/css/core/layout.css
@@ -7,7 +7,8 @@
     @apply h-[calc(100vh-3.5rem)];
     @apply overflow-y-auto fixed top-14 left-0 w-46;
     @apply [&_svg]:text-gray-500 dark:[&_svg]:text-gray-600;
-    transition: all 0.3s ease-in-out;
+    /* Only inset because we don't wand to transition the color when we switch between light/dark mode */
+    transition: inset 0.3s ease-in-out;
     /* On mobile, hide by default and overlay on top */
     @apply md:flex;
     @apply z-50;
@@ -61,7 +62,8 @@
 
 main {
     @apply ps-0 md:ps-46;
-    transition: all 0.3s ease-in-out;
+    /* Only padding because we don't wand to transition the color when we switch between light/dark mode */
+    transition: padding 0.3s ease-in-out;
 }
 
 .nav-closed main {
